install(FILES README COMPONENT ansibleburstbuffer DESTINATION bb/ansible)
install(FILES hosts  COMPONENT ansibleburstbuffer DESTINATION bb/ansible)
install(FILES bbCheck.yml  COMPONENT ansibleburstbuffer DESTINATION bb/ansible)
install(FILES bbInstall.yml COMPONENT ansibleburstbuffer DESTINATION bb/ansible)
install(FILES bbStart.yml  COMPONENT ansibleburstbuffer DESTINATION bb/ansible)
install(FILES bbStop.yml  COMPONENT ansibleburstbuffer DESTINATION bb/ansible)
install(FILES bbUninstall.yml  COMPONENT ansibleburstbuffer DESTINATION bb/ansible)
install(FILES bbserverIPlist.yml  COMPONENT ansibleburstbuffer DESTINATION bb/ansible)
install(FILES certificates.yml COMPONENT ansibleburstbuffer DESTINATION bb/ansible)
install(FILES csmCheck.yml COMPONENT ansibleburstbuffer DESTINATION bb/ansible)
install(FILES csmInstall.yml  COMPONENT ansibleburstbuffer DESTINATION bb/ansible)
install(FILES csmStart.yml  COMPONENT ansibleburstbuffer DESTINATION bb/ansible)
install(FILES csmStop.yml  COMPONENT ansibleburstbuffer DESTINATION bb/ansible)
install(FILES csmUninstall.yml  COMPONENT ansibleburstbuffer DESTINATION bb/ansible)
install(FILES lsfStart.yml  COMPONENT ansibleburstbuffer DESTINATION bb/ansible)
install(FILES lsfStop.yml  COMPONENT ansibleburstbuffer DESTINATION bb/ansible)
install(FILES mpiInstall.yml  COMPONENT ansibleburstbuffer DESTINATION bb/ansible)
install(FILES mpiUninstall.yml  COMPONENT ansibleburstbuffer DESTINATION bb/ansible)
install(FILES nodelist.yml  COMPONENT ansibleburstbuffer DESTINATION bb/ansible)
install(FILES update.yml  COMPONENT burstbuffer DESTINATION bb/ansible)
