install(FILES README COMPONENT burstbuffer-ansible DESTINATION bb/ansible)
install(FILES hosts  COMPONENT burstbuffer-ansible DESTINATION bb/ansible)
install(FILES bbCheck.yml  COMPONENT burstbuffer-ansible DESTINATION bb/ansible)
install(FILES bbInstall.yml COMPONENT burstbuffer-ansible DESTINATION bb/ansible)
install(FILES bbStart.yml  COMPONENT burstbuffer-ansible DESTINATION bb/ansible)
install(FILES bbStop.yml  COMPONENT burstbuffer-ansible DESTINATION bb/ansible)
install(FILES bbUninstall.yml  COMPONENT burstbuffer-ansible DESTINATION bb/ansible)
install(FILES bbserverIPlist.yml  COMPONENT burstbuffer-ansible DESTINATION bb/ansible)
install(FILES certificates.yml COMPONENT burstbuffer-ansible DESTINATION bb/ansible)
install(FILES csmCheck.yml COMPONENT burstbuffer-ansible DESTINATION bb/ansible)
install(FILES csmInstall.yml  COMPONENT burstbuffer-ansible DESTINATION bb/ansible)
install(FILES csmStart.yml  COMPONENT burstbuffer-ansible DESTINATION bb/ansible)
install(FILES csmStop.yml  COMPONENT burstbuffer-ansible DESTINATION bb/ansible)
install(FILES csmUninstall.yml  COMPONENT burstbuffer-ansible DESTINATION bb/ansible)
install(FILES lsfStart.yml  COMPONENT burstbuffer-ansible DESTINATION bb/ansible)
install(FILES lsfStop.yml  COMPONENT burstbuffer-ansible DESTINATION bb/ansible)
install(FILES mpiInstall.yml  COMPONENT burstbuffer-ansible DESTINATION bb/ansible)
install(FILES mpiUninstall.yml  COMPONENT burstbuffer-ansible DESTINATION bb/ansible)
install(FILES nodelist.yml  COMPONENT burstbuffer-ansible DESTINATION bb/ansible)
install(FILES update.yml  COMPONENT burstbuffer-ansible DESTINATION bb/ansible)
