install(FILES README COMPONENT burstbuffer-ansible DESTINATION bb/ansible)
install(FILES hosts  COMPONENT burstbuffer-ansible DESTINATION bb/ansible)
install(FILES bbCheck.yml  COMPONENT burstbuffer-ansible DESTINATION bb/ansible)
install(FILES bbInstall.yml COMPONENT burstbuffer-ansible DESTINATION bb/ansible)
install(FILES bbStart.yml  COMPONENT burstbuffer-ansible DESTINATION bb/ansible)
install(FILES bbStop.yml  COMPONENT burstbuffer-ansible DESTINATION bb/ansible)
install(FILES bbUninstall.yml  COMPONENT burstbuffer-ansible DESTINATION bb/ansible)
install(FILES bbserverIPlist.yml  COMPONENT burstbuffer-ansible DESTINATION bb/ansible)
install(FILES certificates.yml COMPONENT burstbuffer-ansible DESTINATION bb/ansible)
install(FILES nodelist.yml  COMPONENT burstbuffer-ansible DESTINATION bb/ansible)
