install(FILES update.yml  COMPONENT burstbuffer-fvt-ansible DESTINATION bb/fvt-ansible)
install(FILES csmCheck.yml COMPONENT burstbuffer-fvt-ansible DESTINATION bb/fvt-ansible)
install(FILES csmInstall.yml  COMPONENT burstbuffer-fvt-ansible DESTINATION bb/fvt-ansible)
install(FILES csmStart.yml  COMPONENT burstbuffer-fvt-ansible DESTINATION bb/fvt-ansible)
install(FILES csmStop.yml  COMPONENT burstbuffer-fvt-ansible DESTINATION bb/fvt-ansible)
install(FILES csmUninstall.yml  COMPONENT burstbuffer-fvt-ansible DESTINATION bb/fvt-ansible)
install(FILES lsfStart.yml  COMPONENT burstbuffer-fvt-ansible DESTINATION bb/fvt-ansible)
install(FILES lsfStop.yml  COMPONENT burstbuffer-fvt-ansible DESTINATION bb/fvt-ansible)
install(FILES mpiInstall.yml  COMPONENT burstbuffer-fvt-ansible DESTINATION bb/fvt-ansible)
install(FILES mpiUninstall.yml  COMPONENT burstbuffer-fvt-ansible DESTINATION bb/fvt-ansible)
